# python-rimworld

./: README.md  pyproject.toml  shell.py
.github/workflows/: pylint.yml
rimworld/: .gitignore  README.md  __init__.py  base.py  gameversion.py  mod.py  model.py  patch.py  rimworld.py  world.py  worldsettings.py  xml.py
rimworld/patch/: __init__.py  _base.py  _result.py  add.py  addmodextension.py  attributeadd.py  attributeremove.py  attributeset.py  conditional.py  findmod.py  insert.py  op_test.py  patcher.py  proto.py  remove.py  replace.py  sequence.py  setname.py
rimworld/patch/operations/: add.py  addmodextension.py  attributeadd.py  attributeremove.py  attributeset.py  conditional.py  findmod.py  insert.py  op_test.py  remove.py  replace.py  sequence.py  setname.py
rimworld/patch/xmlextensions/: _base.py  addorreplace.py  safeadd.py
testdata/config/expansions_only/Config/: ModsConfig.xml
testdata/rimworld_expansions/Anomaly/About/: About.xml
testdata/rimworld_expansions/Biotech/About/: About.xml
testdata/rimworld_expansions/Core/About/: About.xml
testdata/rimworld_expansions/Ideology/About/: About.xml
tests/: test_gameversion.py  test_modabout.py  test_model.py  test_modsconfig.py  test_patches.py  test_patches_dd.py  test_xml.py
tests/mods/Biotech/About/: About.xml
tests/patches/: add.xml  add_mod_extension.xml  add_or_replace.xml  attribute_add.xml  attribute_remove.xml  attribute_set.xml  conditional.xml  find_mod.xml  insert.xml  remove.xml  replace.xml  safe_add.xml  sequence.xml  set_name.xml  skipunknown.xml  test.xml
(+10 files in other folders)
